第一篇文章发布

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1127,11 +1127,11 @@ pre code {
 .post-card .post-card-body .post-card-title {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
   font-size: 18px;
   color: #fff;
   margin: 0 0 10px;
 }
+/*text-transform: uppercase;*/
 
 .post-card .post-card-body .post-card-title:hover {
   opacity: .8;
@@ -2059,7 +2059,7 @@ pre code {
 .navbar-container{position:relative;max-width:100%;width:30%;text-align:right}
 
 .navbar-menu{z-index:10;display:inline-block;width:auto;padding-right:5px;float:right;}
-.navbar-menu a{font-size:14px;padding:0 15px;text-decoration: none;}
+.navbar-menu a{font-size:14px;padding:0 15px;text-decoration: none;color:#313131;}
 .navbar-mobile-menu{z-index:1;display:none;width:28px;padding:0 45px 0 10px;cursor:pointer;float:right;}
 .navbar-mobile-menu:active,.navbar-mobile-menu:hover{cursor:pointer;}
 .navbar-mobile-menu:active:before,.navbar-mobile-menu:hover:before{-webkit-animation:pointer-ball .3s ease 1;animation:pointer-ball .3s ease 1;-webkit-animation-timing-function:cubic-bezier(.61,.04,.17,1.32);animation-timing-function:cubic-bezier(.61,.04,.17,1.32);}
@@ -2071,7 +2071,7 @@ pre code {
 .navbar-mobile-menu li{position:relative;display:inline;margin:0;text-decoration:none;}
 .navbar-mobile-menu ul{position:absolute;z-index:1;top:100%;overflow:hidden;clip:rect(1px,1px,1px,1px);margin:0 0 0 -95px;padding:0;-webkit-transition:-webkit-transform 300ms;transition:-webkit-transform 300ms;transition:transform 300ms;-webkit-transform:translate(120px,0);-ms-transform:translate(120px,0);transform:translate(120px,0);text-indent:0;}
 .navbar-mobile-menu:hover>ul,.navbar-mobile-menu:active>ul,.navbar-mobile-menu:focus>ul{overflow:inherit;clip:inherit;-webkit-transition:-webkit-transform 300ms;transition:-webkit-transform 300ms;transition:transform 300ms;-webkit-transform:translateX(0px) translateY(0px) translateZ(0px);transform:translateX(0px) translateY(0px) translateZ(0px);}
-.navbar-mobile-menu ul li a{font-size:15px;line-height:2.2;display:block;width:140px;margin:0;padding:8px 25px;background-color:#eee;}
+.navbar-mobile-menu ul li a{font-size:15px;line-height:2.2;display:block;width:140px;margin:0;padding:8px 25px;background-color:#eee;color:#313131;}
 
 
 
@@ -2117,7 +2117,7 @@ pre code {
 
 /*文字移入效果*/
 a:first-child h1,a:first-child h2,a:first-child h3,a:first-child h4,a:first-child h5,a:first-child h6{margin-top:0;padding-top:0;}
-a{text-decoration:none;color:#313131;outline:0;}
+/*a{text-decoration:none;color:#313131;outline:0;}*/
  /* a:active,a:focus,a:hover{color:#eb5055;outline:0;}  */
 /* a:active,a:focus,a:hover{color:#eb5055;outline:0;} */
 a::before{
