--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
       </div>
       <nav class="main-nav">
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
-        <ul style="height:800px;overflow-y:scroll;overflow-y:auto;">
+        <!--<ul style="height:800px;overflow-y:scroll;overflow-y:auto;"> -->
+        <ul>
 		 {% for link in site.links1 %}
 			 {% assign count = 0 %}
 			 {% if link.type == site.blog_1 %}
