--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,45 +15,51 @@
 	<meta name="msapplication-navbutton-color" content="#311e3e">
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#311e3e">
-	
-	
-	
-	
+
+
+
+
 	<!-- Google Fonts 1
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">-->
-	
-	
-	
-	
-	
+
+
+
+
+
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 	<!-- Styles -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 
-	<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>  
-	
-	
+	<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+
 	<!--百度统计-->
 	<script>
 		var _hmt = _hmt || [];
 		(function() {
 		  var hm = document.createElement("script");
 		  hm.src = "https://hm.baidu.com/hm.js?{{ site.baidu-analysis }}";
-		  var s = document.getElementsByTagName("script")[0]; 
+		  var s = document.getElementsByTagName("script")[0];
 		  s.parentNode.insertBefore(hm, s);
 		})();
 	</script>
-	
-	
-	
-	
-	
-	
-	
+
+
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-4924092018203651",
+	    enable_page_level_ads: true
+	  });
+	</script>
+
+
+
 	<!--谷歌统计-->
-	<!-- Global site tag (gtag.js) - Google Analytics 
+	<!-- Global site tag (gtag.js) - Google Analytics
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analysis }}"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
