--- a/css/item.css
+++ b/css/item.css
@@ -15,9 +15,9 @@
     overflow: hidden;
     position: relative;
     height: 160px;
-    background-position: center center;
+    /* background-position: center center;
     background-repeat:  no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 100%; */
 }
 
 .imgcover
